--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "typescript": "^3.9.7"
   }
