--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/react": "^10.4.8",
+    "@types/jest": "^26.0.10",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/testing-library__react": "^10.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^3.9.7"
   }
 }
